revert: fix - HTML horizontal scrolling

--- a/inst/web_1.1.0/scrool.css
+++ b/inst/web_1.1.0/scrool.css
@@ -1,4 +1,3 @@
 .flextable-shadow-host{
   overflow: scroll;
-  white-space: nowrap;
 }
